app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menghout009-trip-react-svc
spec:
  selector:
    app: menghout009-trip-react
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
